--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="header" id='home'>
             <div class="top-bar">
                 <div class="row top-bar__row">
-                    <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
+                    <div class="col-lg-2 col-md-2 col-3 pl-md-5 pl-0 top-bar__row-col__logo">
                         <a href="index.html"><img src="img/logo-white.svg" alt="Logo"></a>
                     </div>
                     <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
@@ -65,7 +65,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="col-lg-2 d-flex text-right flex-column col-md-2 col-4 pr-5 top-bar__row-col__auth">
+                    <div class="col-lg-2 d-flex text-right flex-column col-md-2 col-8 pr-5 top-bar__row-col__auth">
                         <a href='sign-in.html' class="sign-in-btn">
                             Sign In
                         </a>
@@ -169,6 +169,84 @@
         </div>
     </section>
 
+    <!-- COMPANY AIMS SECTION -->
+
+    <section class="company-aims">
+        <div class="container">
+            <h1 class="section-title" id="company-aims">
+                What <span>ids</span> do
+            </h1>
+            <div class="row big-letters__row">
+                <div class="col-lg-4 col-12 big-letters__row-block">
+                    <span>M</span>
+                    <p>
+                        For mechanical
+                        (air conditioning, ventilation,
+                        smoke extraction, firefighting)
+                    </p>
+                </div>
+                <div class="col-lg-4 col-12 big-letters__row-block">
+                    <span>E</span>
+                    <p>
+                        For electrical, light current
+                        systems, fire alarms, building
+                        controls
+                    </p>
+                </div>
+                <div class="col-lg-4 col-12 big-letters__row-block">
+                    <span>P</span>
+                    <p>
+                        For plumbing uses pipes,
+                        plumbing fixtures, tanks, other
+                        apparatuses to convey fluids
+                    </p>
+                </div>
+            </div>
+            <!--  -->
+            <div class="services__row">
+                <div class="col-3">
+                    Full mep systems
+                </div>
+                <div class="col-3">
+                    Design<br>
+                    for new constructions
+                </div>
+                <div class="col-3">
+                    Design<br>
+                    for renovations of existing<br>
+                    constructions
+                </div>
+                <div class="col-3">
+                    Design<br>
+                    for health care facilities,<br>
+                    hospitals, clinical applications<br>
+                </div>
+
+                <!-- -->
+
+                <div class="col-3">
+                    Solutions<br>
+                    for existing constructions<br>
+                    with current operation
+                </div>
+                <div class="col-3">
+                    Industrial solutions<br>
+                    for pharmaceutical plants
+                </div>
+                <div class="col-3">
+                    Technical solutions<br>
+                    for residential & commercial<br>
+                    application failures
+                </div>
+                <div class="col-3">
+                    Design, problems solutions,<br>
+                    contractor recommendation<br>
+                    & supervision are our specialty
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- SERVICES SECTION -->
 
     <section class='services'>
@@ -262,10 +340,11 @@
             <div class="row">
                 <div class="col-md-5 col-12">
                     <span class="subscribe__span">
-                        First ever engineering <strong>Lounge</strong>
+                        First ever engineering <strong>Lounge</strong> &reg;
                     </span>
                     <h2 class="subscribe__title">
-                        Ids at your door step mep consulting service club
+                        Ids at your door step<br>
+                        mep consulting service lounge
                     </h2>
                 </div>
                 <div class="col-md-7 col-12">
@@ -278,84 +357,6 @@
                             Subscribe
                         </button>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- COMPANY AIMS SECTION -->
-
-    <section class="company-aims">
-        <div class="container">
-            <h1 class="section-title" id="company-aims">
-                What <span>ids</span> do?
-            </h1>
-            <div class="row big-letters__row">
-                <div class="col-lg-4 col-12 big-letters__row-block">
-                    <span>M</span>
-                    <p>
-                        For mechanical 
-                        (air conditioning, ventilation, 
-                        smoke extraction, firefighting)
-                    </p>
-                </div>
-                <div class="col-lg-4 col-12 big-letters__row-block">
-                    <span>E</span>
-                    <p>
-                        For electrical, light current 
-                        systems, fire alarms, building
-                        controls
-                    </p>
-                </div>
-                <div class="col-lg-4 col-12 big-letters__row-block">
-                    <span>P</span>
-                    <p>
-                        For plumbing uses pipes, 
-                        plumbing fixtures, tanks, other 
-                        apparatuses to convey fluids
-                    </p>
-                </div>
-            </div>
-            <!--  -->
-            <div class="services__row">
-                <div class="col-3">
-                    Full mep systems
-                </div>
-                <div class="col-3">
-                    Design<br>
-                    for new constructions
-                </div>
-                <div class="col-3">
-                    Design<br>
-                    for renovations of existing<br>
-                    constructions
-                </div>
-                <div class="col-3">
-                    Design<br>
-                    for health care facilities,<br>
-                    hospitals, clinical applications<br>
-                </div>
-
-                <!-- -->
-
-                <div class="col-3">
-                    Solutions<br>
-                    for existing constructions<br>
-                    with current operation
-                </div>
-                <div class="col-3">
-                    Industrial solutions<br>
-                    for pharmaceutical plants
-                </div>
-                <div class="col-3">
-                    Technical solutions<br>
-                    for residential & commercial<br>
-                    application failures
-                </div>
-                <div class="col-3">
-                    Design, problems solutions,<br>
-                    contractor recommendation<br>
-                    & supervision are our specialty
                 </div>
             </div>
         </div>
