--- a/sign-up.html
+++ b/sign-up.html
@@ -33,7 +33,7 @@
 <header class="header" id='home'>
     <div class="top-bar">
         <div class="row top-bar__row">
-            <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
+            <div class="col-lg-2 col-md-2 col-3 pl-md-5 pl-0 top-bar__row-col__logo">
                 <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
             </div>
             <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="col-lg-2 col-md-2 col-4 pr-5 d-flex text-right flex-column top-bar__row-col__auth">
+            <div class="col-lg-2 col-md-2 col-8 pr-5 d-flex text-right flex-column top-bar__row-col__auth">
                 <a href='sign-in.html' class="sign-in-btn">
                     Sign In
                 </a>
