--- a/index.html
+++ b/index.html
@@ -356,6 +356,75 @@
                     </div>
                 </div>
             </div>
+            <div class="subscribe-plans">
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership1.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                White plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                2000 - 2400 AED
+                            </span>
+                        </div>
+                    </div>
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership2.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                Red plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                10000 - 12000 AED
+                            </span>
+                        </div>
+                    </div>
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership3.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                Yellow plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                20000 - 24000 AED
+                            </span>
+                        </div>
+                    </div>
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership4.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                Green plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                120000 - 1450000 AED
+                            </span>
+                        </div>
+                    </div>
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership5.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                Blue plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                300000 - 360000 AED
+                            </span>
+                        </div>
+                    </div>
+                    <div class=" subscribe-plans__col">
+                        <img src="img/membership6.svg" alt="">
+                        <div class="subscribe-plan__info-wrap">
+                            <p class='subscribe-plans__title'>
+                                Black plan
+                            </p>
+                            <span class="subscribe-plans__info">
+                                500000 - 600000 AED
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
