--- a/index.html
+++ b/index.html
@@ -340,8 +340,12 @@
                         First ever engineering <strong>Lounge</strong> &reg;
                     </span>
                     <h2 class="subscribe__title">
-                        Ids at your door step<br>
-                        mep consulting service lounge
+                        MEP CONSULTING
+                        AT YOUR 
+                        DOORSTEP.
+                        MINIMUM FEES
+                        FOR DESIRABLE
+                        SERVICES
                     </h2>
                 </div>
                 <div class="col-md-7 col-12">
