--- a/payment.html
+++ b/payment.html
@@ -80,56 +80,56 @@
                 <div class="row">
                     <div class="col-1 mr-5">
                         <div class="progress-line">
-                            <div class="progress-line__block 1 blue active">
+                            <div class="progress-line__block circle-1 blue active">
                                 <div class="progress-line__block-number">
                                     1
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 2 ">
+                            <div class="progress-line__block circle-2 ">
                                 <div class="progress-line__block-number">
                                     2
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 3">
+                            <div class="progress-line__block circle-3">
                                 <div class="progress-line__block-number">
                                     3
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 4">
+                            <div class="progress-line__block circle-4">
                                 <div class="progress-line__block-number">
                                     4
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 5">
+                            <div class="progress-line__block circle-5">
                                 <div class="progress-line__block-number">
                                     5
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 6">
+                            <div class="progress-line__block circle-6">
                                 <div class="progress-line__block-number">
                                     6
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 7">
+                            <div class="progress-line__block circle-7">
                                 <div class="progress-line__block-number">
                                     7
                                 </div>
                                 <div class="progress-line__block-bottom">
                                 </div>
                             </div>
-                            <div class="progress-line__block 8">
+                            <div class="progress-line__block circle-8">
                                 <div class="progress-line__block-number">
                                     8
                                 </div>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="col-10 pl-5 pr-0 pr-md-5 d-flex">
-                        <div class="sign-up__start-section w-100 sign-up__individual-section active">
+                        <div class="sign-up__start-section w-100 sign-up__individual-section step-1 active">
                             <p class='sign-up__section-label'>
                                 Please fill out those fields to complete your Subscribe Process
                             </p>
@@ -170,7 +170,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-2">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 2
@@ -204,7 +204,7 @@
                                 <img src="img/map-step-2.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-3">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 3
@@ -238,7 +238,7 @@
                                 <img src="img/building-step-3.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-4">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 4
@@ -272,7 +272,7 @@
                                 <img src="img/service-step-4.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-5">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 5
@@ -306,7 +306,7 @@
                                 <img src="img/notebook-step-5.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-6">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 6
@@ -333,7 +333,7 @@
                                 <img src="img/money-step-6.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-7">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 7
@@ -383,7 +383,7 @@
                                 <img src="img/mail-7-step.svg" class='right-step-img' alt="">
                             </div>
                         </div>
-                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section">
+                        <div class="sign-up__start-section void flex-row w-100 d-flex sign-up__individual-section step-8">
                             <div class='d-flex flex-column w-100 pt-4'>
                                 <span class="sign-up__section-span pt-5 mt-5">
                                     Step 8
