--- a/user.html
+++ b/user.html
@@ -84,7 +84,7 @@
                         <div class="d-flex flex-column to">
                             <div class="user-top-bar__img-container">
                                 <div class="user-top-bar__img-wrap">
-                                    <img src="https://via.placeholder.com/130/f8333a/FFFFFF ?Text=Digital.com" alt="">
+                                    <img src="img/people-image.jpg" alt="">
                                 </div>
                                 <button type='submit' class='avatar-add-btn'>
                                     <img src="img/plus.svg" alt="add avatar">
