--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </p>
                 </div>
                 <div class="services-slider__block col-lg-4 col-sm-6 col-12">
-                    <img src="img/sergei-akulich-h-fbfc-5-ym-ick-unsplash.png" alt="Services slider image">
+                    <img src="img/electric.jpg" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Electrical Works
                     </p>
